[project]
name = "llm-vlm-node"
description = "A unified ComfyUI node for both LLM (text-only) and VLM (image-to-text) generation using GGUF models.."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/squirrel765/ComfyUI-LLM-VLM-Node"
# Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/squirrel765/ComfyUI-LLM-VLM-Node/wiki"
"Bug Tracker" = "https://github.com/squirrel765/ComfyUI-LLM-VLM-Node/issues"

[tool.comfy]
PublisherId = "squirrel765"
DisplayName = "ComfyUI-LLM-VLM-Node"
Icon = "icon.png"
includes = ["icon.png"] 
publisher = "squirrel765"
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

